fix sidebar overflow

--- a/client/style.css
+++ b/client/style.css
@@ -12,6 +12,7 @@ body, html {
   width: 200px;
   border-right: 1px solid #ccc;
   padding: 10px;
+  overflow: auto;
 }
 
 #editor {
